<resources>
    <string name="app_name">天气</string>

    <string name="hint_text">hint</string>
    <string name="forecast_title_text">预报</string>
    <string name="forecast_date_text">日期</string>
    <string name="forecast_weather_text">天气</string>
    <string name="forecast_maxTemperature_text">最高温度</string>
    <string name="forecast_minTemperature_text">最低温度</string>
    <string name="aqi_title_text">空气质量</string>
    <string name="aqi_zhishu_text">AQI 指数</string>
    <string name="aqi_pm_text">PM2.5 指数</string>
    <string name="suggestion_title_text">生活建议</string>
</resources>
